@@ -28,6 +28,7 @@
 
 int unittests_run( void );
 
+int unittests_assert_2k_page( libspectrum_word base, int source, int page );
 int unittests_assert_4k_page( libspectrum_word base, int source, int page );
 int unittests_assert_8k_page( libspectrum_word base, int source, int page );
 int unittests_assert_16k_page( libspectrum_word base, int source, int page );
